--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "recharts": "^2.4.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "sequelize": "^6.29.0"
+    "sequelize": "^6.29.0",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2"
   }
 }
