--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.2.1",
     "mongodb": "^5.1.0",
     "next": "13.2.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
